fix carousel overflow

--- a/websms/src/Components/Carousel/slider.css
+++ b/websms/src/Components/Carousel/slider.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --heights: 55vh;
+  --heights: 70vh;
   --widths: 100%;
 }
 
@@ -34,8 +34,8 @@
 }
 
 .slide-image {
-  width: 40%;
-  height: 100%;
+  /* width: 100%; */
+  height: 65%;
   align-self: center;
 }
 
@@ -139,10 +139,10 @@
   height: 100%;
   position: relative;
   display: flex;
-  /* top: 85%; */
+  top: 5%;
   justify-content: center;
   z-index: 200;
-  visibility: none;
+  
 }
 
 .dot {
